--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,8 @@
     <p><a href="about">About <%=shopData.shopName%></a></p>
     <p><a href="books/search">Search for books</a></p>
     <p><a href="users/register">Register with us</a></p>
+    <p><a href="books/addbook">Add a Book</a></p>
+    <p><a href="books/list">List all Books</a></p>
+    <p><a href="books/bargainbooks">Bargain for books</a></p>
   </body>
 </html>
