--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>Search <%=shopData.shopName%></h1>
-    <form action="/books/search-result" method="GET">
+    <form action="/books/search-result" method="POST">
       <p>What book do you want?</p>
-      <input id="search-box" type="text" name="search_text">
+      <input id="search-box" type="text" name="keyword">
       <input type="submit" value="Search" >
     </form>
   </body>
