--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,6 @@
     <p><a href="books/addbook">Add a Book</a></p>
     <p><a href="books/list">List all Books</a></p>
     <p><a href="books/bargainbooks">Bargain for books</a></p>
+    <p><a href="/logout">Logout</a></p>
   </body>
 </html>
